# zebra-apps

./: .gitignore  Cargo.toml  LICENSE  README.md
config/apps/: capture.toml  gmail_ai_news.toml  review.toml  summarize.toml
config/gmail/: oauth_client_secret.example.json
config/prompts/: gmail_ai_news_summary.md  gmail_podcast_transcript.md
config/providers/: openai.example.toml
config/schedules/: default.toml
crates/apps/capture/: Cargo.toml
crates/apps/capture/src/: main.rs
crates/apps/capture/tests/: smoke.rs
crates/apps/gmail_ai_news/: Cargo.toml
crates/apps/gmail_ai_news/src/: main.rs
crates/apps/gmail_ai_news/tests/: smoke.rs
crates/apps/review/: Cargo.toml
crates/apps/review/src/: main.rs
crates/apps/review/tests/: smoke.rs
crates/apps/summarize/: Cargo.toml
crates/apps/summarize/src/: main.rs
crates/apps/summarize/tests/: smoke.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  document.rs  gmail.rs  lib.rs  provider.rs  runlog.rs  workspace.rs
crates/ops/: Cargo.toml
crates/ops/src/: main.rs
crates/ops/tests/: smoke.rs
docs/plans/: 2026-03-25-rust-llm-apps.md
