[package]
name = "core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "zebra_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-openai = { version = "0.33.1", default-features = false, features = ["responses", "byot"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
yup-oauth2 = { version = "12.1.2", default-features = false, features = ["hyper-rustls", "ring"] }
